--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -9,8 +9,8 @@
     display: grid;
     grid-template-rows: repeat(4, auto);
     grid-template-columns: 100%;
-    align-items: top;
-    justify-items: left;
+    align-items: start;
+    justify-items: start;
 
     @include breakpoints.b {
         grid-template-rows: auto auto;
